--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "nwidart/laravel-modules": "^4.0",
         "symfony/polyfill-iconv": "^1.9",
         "symfony/polyfill-mbstring": "^1.9",
         "yabacon/paystack-php": "^2.1"
@@ -29,7 +30,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         },
         "files" : ["app/Helper.php"]
     },
